<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.naganithin.activitysensor.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="61dp"
            android:text="@string/accelerometer_x" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="16dp"
            android:text="@string/accelerometer_y" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="18dp"
            android:text="@string/accelerometer_z" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="36dp"
            android:text="@string/gyroscope_x" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="14dp"
            android:text="@string/gyroscope_y" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/gyroscope_z"
            android:layout_below="@+id/textView11"
            android:layout_alignStart="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView12"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="42dp"
            android:text="@string/magnetometer_x" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="24dp"
            android:text="@string/magnetometer_y" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="26dp"
            android:text="@string/magnetometer_z" />

        <TextView
            android:id="@+id/ax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_marginStart="66dp"
            android:layout_toEndOf="@+id/textView7"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/ay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ax"
            android:layout_alignTop="@+id/textView8"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/az"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignStart="@+id/ay"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/gx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/az"
            android:layout_alignTop="@+id/textView10"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/gy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gx"
            android:layout_alignTop="@+id/textView11"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/gz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gy"
            android:layout_alignTop="@+id/textView12"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/mx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gz"
            android:layout_alignTop="@+id/textView13"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/mx"
            android:layout_alignTop="@+id/textView14"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/mz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/my"
            android:layout_alignTop="@+id/textView15"
            android:text="@string/textview" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
